outputs/workspace_output_1771851186_3397.txt
    |                  ^^^^^^^
    |
   ::: /root/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/zeroize-1.8.2/src/lib.rs:275:8
    |
275 |     fn zeroize(&mut self);
    |        ------- the method is available for `Vec<u8>` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Zeroize` which provides `zeroize` is implemented but not in scope; perhaps you want to import it
    |
  5 + use zeroize::Zeroize;
    |
help: there is a method `zero` with a similar name
    |
 35 -         combined.zeroize();
 35 +         combined.zero();
    |

error[E0609]: no field `0` on type `&crypto::hash::Hash`
  --> crypto/hash.rs:42:15
   |
42 |         &self.0
   |               ^ unknown field
   |
   = note: available field is: `bytes`

error: the `Self` constructor can only be used with tuple or unit structs
  --> crypto/hash.rs:60:12
   |
60 |         Ok(Self(arr))
   |            ^^^^^^^^^ help: use curly brackets: `Self { /* fields */ }`

error[E0308]: mismatched types
   --> network/protocol.rs:144:13
    |
144 |           let (classical_pair, classical_public) = crate::crypto::keys::EphemeralKeyPair::new()
    |  _____________^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^___-
    | |             |
    | |             expected `EphemeralKeyPair`, found `(_, _)`
145 | |             .map_err(|e| crate::VantisError::CryptoError(e.to_string()))?;
    | |_________________________________________________________________________- this expression has type `EphemeralKeyPair`
    |
    = note: expected struct `EphemeralKeyPair`
                found tuple `(_, _)`

error[E0308]: mismatched types
  --> network/wireguard.rs:71:13
   |
71 |           let (key_pair, public_key) = crate::crypto::keys::EphemeralKeyPair::new()
   |  _____________^^^^^^^^^^^^^^^^^^^^^^___-
   | |             |
   | |             expected `EphemeralKeyPair`, found `(_, _)`
72 | |             .map_err(|e| crate::VantisError::CryptoError(e.to_string()))?;
   | |_________________________________________________________________________- this expression has type `EphemeralKeyPair`
   |
   = note: expected struct `EphemeralKeyPair`
               found tuple `(_, _)`

warning: unused variable: `associated_data`
   --> crypto/keys.rs:218:46
    |
218 |     pub fn decrypt(&self, ciphertext: &[u8], associated_data: &[u8]) -> crate::Result<Vec<u8>> {
    |                                              ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_associated_data`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `message`
   --> crypto/pqc.rs:132:17
    |
132 |     pub fn sign(message: &[u8], secret_key: &[u8]) -> crate::Result<Self> {
    |                 ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_message`

warning: unused variable: `secret_key`
   --> crypto/pqc.rs:132:33
    |
132 |     pub fn sign(message: &[u8], secret_key: &[u8]) -> crate::Result<Self> {
    |                                 ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_secret_key`

warning: unused variable: `message`
   --> crypto/pqc.rs:140:26
    |
140 |     pub fn verify(&self, message: &[u8], public_key: &[u8]) -> crate::Result<bool> {
    |                          ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_message`

warning: unused variable: `public_key`
   --> crypto/pqc.rs:140:42
    |
140 |     pub fn verify(&self, message: &[u8], public_key: &[u8]) -> crate::Result<bool> {
    |                                          ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_public_key`

warning: unused variable: `response`
   --> network/protocol.rs:168:9
    |
168 |         response: HandshakeResponse,
    |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_response`

Some errors have detailed explanations: E0277, E0308, E0425, E0599, E0609, E0624.
For more information about an error, try `rustc --explain E0277`.
warning: `vantis-core` (lib) generated 10 warnings
error: could not compile `vantis-core` (lib) due to 12 previous errors; 10 warnings emitted
